--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+		'Droid Sans', 'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.App {
+	margin: 20px;
+}
+.grid {
+	display: flex;
+	flex-direction: column;
+}
+.row {
+	display: flex;
+}
+.cell {
+	border-left: 1px solid lightgray;
+	border-top: 1px solid lightgray;
+	font-size: xx-small;
+	cursor: pointer;
+	text-align: center;
+}
+.cell:hover {
+	color: red;
+	font-weight: bold;
+}
+.cell:last-child {
+	border-right: 1px solid lightgray;
+}
+.row:last-child .cell {
+	border-bottom: 1px solid lightgray;
 }
